<resources>

    <string name="welcome_to_hisab_book">Welcome To Hisab Book</string>
    <string name="User_Id">User Id</string>
    <string name="Password">Password</string>
    <string name="remember_password_in_this_device">Remember password in this device</string>
    <string name="log_in">log In</string>
    <string name="new_user_signup_here">new user signup here</string>
    <string name="app_name">Hisab book</string>
    <string name="register_here">Register Here</string>
    <string name="to_go_back_to_back_activity">To go back to back activity</string>
    <string name="dasboard">Dasboard</string>
    <string name="logout">LogOut</string>
    <string name="you_are_successfully_logged_in">You are successfully logged in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="home_second">Home Second</string>
    <string name="menu_category">Category</string>
    <string name="menu_total_sale">Total Sale</string>
    <string name="menu_workers">Workers</string>
    <string name="menu_venders">Venders</string>
    <string name="menu_customer">Customer</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_social">Social</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">LogOut</string>
    <string name="menu_help">Help</string>
    <string name="menu_add_product">Add Product</string>
    <string name="stock">Stock</string>
    <string name="today_s_sale">Today\'s Sale</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Already_have_an_account_sign_In_here">Already Have an Account</string>
    <string name="menu_home">Hi</string>
    <string name="Name">Name</string>
    <string name="shop_name">shop Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="menu_stock">Stock</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="select_category">Select Category</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="date">Date</string>
    <string name="qunatity">Qunatity</string>
    <string name="size">Size</string>
    <string name="vender">Vender</string>
    <string name="mrp">MRP</string>
    <string name="cost_price">Cost Price</string>
    <string name="product_code">Product Code</string>
    <string name="product_name">Product Name</string>
    <string name="add">Add</string>
    <string name="update">update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset password</string>
    <string name="email">Email</string>
    <string name="gst_number">GST Number</string>
    <string name="email_address">Email Address</string>
    <string name="shop_address">Shop Address</string>
    <string name="submit">Submit</string>
    <string name="add_category">Add Category</string>
    <string name="enter_category">Enter Category</string>
    <string name="selling_price">Selling Price</string>
    <string name="Customer_name">Customer Name</string>
    <string name="name">Name</string>
    <string name="worker_code">Worker Code</string>
    <string name="salary">Salary</string>
    <string name="Age">Age</string>
    <string name="Address">Address</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_worker">Add Worker</string>
    <string name="vender_name">Vender Name</string>
    <string name="add_vender">Add Vender</string>
    <string name="add_sale">Add Sale</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="LogOut">LogOut</string>
    <string name="logging_out">logging out....</string>
    <string name="wekcome_to_your_own_hisab_book">Wekcome to your own hisab book</string>

</resources>
