<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Add_Category">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_category"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:gravity="center_horizontal" />


        <EditText
            android:id="@+id/add_categ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/enter_category"
            android:layout_margin="15dp"/>



    <Button
        android:id="@+id/add_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/add"
        android:textColor="@android:color/background_light" />

</LinearLayout>

