<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Add_Product">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="59dp"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/Select_Category"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/select_category"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Select_Category_id"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Product_Name"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/product_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Product_Name_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Product_Code"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/product_code"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Product_Code_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Cost_Price"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/cost_price"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Cost_Price_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/MRP"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/mrp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/MRP_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Vender"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/vender"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Vender_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Size"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/size"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Sizey_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Qunatity"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/qunatity"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Qunatity_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Date"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"

            android:text="@string/date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Daet_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="datetime"

            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:layout_margin="15dp"
        android:id="@+id/button_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product" />


</LinearLayout>