<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Add_Sale">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/sel_cust_name"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/Customer_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/sel_cust_name_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Cust_Phone_number"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Cust_phone_Number_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Sel_product"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/product_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Sel_product_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/sel_size"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/size"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sel_size_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/sel_cost_price"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/cost_price"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sel_cp_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/sel_sp"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/selling_price"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Sel_sp_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>


    <Button
        android:layout_margin="15dp"
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product" />


</LinearLayout>