<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:orientation="vertical"
    tools:context=".EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Prof_Name_edit"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/Name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Owner_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Prof_shop_name_edit"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/shop_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/owner_shop_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/GST_Number_edit"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gst_number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/owner_gst_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/prof_phone_number_edit"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Owner_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Owner_Email_add_edit"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/email_address"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/emailadsress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Owner_shop_address_edit"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:layout_weight="1"
            android:text="@string/shop_address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/shopadress_id"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_margin="10dp"
            android:layout_weight="1" />

    </LinearLayout>
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/submit"/>




</LinearLayout>