<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    tools:context=".Profile">


        <TextView
            android:id="@+id/Prof_Name"
            android:layout_width="100dp"
            android:layout_height="51dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"

            android:text="@string/Name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Owner_name"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="Name"
            android:layout_marginLeft="115dp"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/Prof_shop_name"
            android:layout_width="100dp"
            android:layout_height="51dp"
            android:layout_marginTop="52dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/shop_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/owner_shop_name"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:text="xyz limited"
            android:gravity="center"
            android:layout_marginTop="52dp"
            android:layout_marginLeft="115dp"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/GST_Number"
            android:layout_width="100dp"
            android:layout_height="51dp"
            android:layout_marginTop="104dp"

            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gst_number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/owner_gst_number"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:text="9999999999"
            android:layout_marginTop="104dp"
            android:gravity="center"
            android:layout_marginLeft="115dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/prof_phone_number"
            android:layout_width="100dp"
            android:layout_height="51dp"
            android:layout_marginTop="156dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Owner_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:text="9999999999"
            android:gravity="center"
            android:layout_marginTop="156dp"
            android:layout_marginLeft="115dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/Owner_Email_add"
            android:layout_width="100dp"
            android:layout_height="51dp"
            android:layout_marginTop="217dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/email_address"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/owner_emailadsress"
            android:layout_width="wrap_content"
            android:text="xyz@gmail.com"
            android:layout_height="51dp"
            android:gravity="center"
            android:layout_marginTop="217dp"
            android:layout_marginLeft="115dp"
            android:layout_weight="1" />




        <TextView
            android:id="@+id/Prof_shop_address"
            android:layout_width="100dp"
            android:layout_height="58dp"
            android:layout_marginTop="269dp"
            android:layout_marginLeft="15dp"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:layout_weight="1"
            android:text="@string/shop_address"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/owner_shop_address"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:gravity="center"
            android:text="abcd"
            android:layout_marginTop="269dp"
            android:layout_marginLeft="115dp"
            android:layout_weight="1" />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_add_black_24dp"
         />




</FrameLayout>